@@ -17,11 +17,8 @@ match = ~$
 allow_dirty = dist.ini
 
 [Git::NextVersion]
-first_version = 0.05
-version_regexp = ^(\d+\.\d+)(?:[_-]\w+)?$
 
 [NextRelease]
-format = %-4v %{YYYY-MM-dd}d
 
 [CheckChangeLog]
 
@@ -33,7 +30,7 @@ skip = ^LWP
 
 [Prereqs / RuntimeRequires]
 Task::Weaken = 0
-;Net::Async::Webservice::Common = 0
+Net::Async::Webservice::Common = 0
 
 [Prereqs / RuntimeRecommends]
 IO::Async::Loop = 0
@@ -55,7 +52,7 @@ CHI = 0
 
 [NoTabsTests]
 
-;[PodCoverageTests]
+[PodCoverageTests]
 
 [PodSyntaxTests]
 
@@ -65,10 +62,7 @@ CHI = 0
 
 directory = t/lib
 
-[MetaResources]
-repository.web = https://github.com/NET-A-PORTER/Net-UPS.git
-repository.url = git://github.com/NET-A-PORTER/Net-UPS.git
-repository.type = git
+[Repository]
 
 [MetaYAML]
 
