@@ -1,4 +1,5 @@
 {{$NEXT}}
+ - first non-dev release
 
 0.09_6 2014-06-17
  - migrate to Net::Async::Webservice::Common (not yet released, so
